--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,6 +15,7 @@ dependencies:
   english_words: ^4.0.0
   provider: ^6.0.0
   go_router: ^14.6.3
+  dio: ^5.7.0
 
 dev_dependencies:
   flutter_test:
