--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,6 +16,7 @@ dependencies:
   provider: ^6.0.0
   go_router: ^14.6.3
   dio: ^5.7.0
+  flutter_riverpod: ^2.6.1
 
 dev_dependencies:
   flutter_test:
